[package]
name = "strck-cli"
version = "0.1.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2018"

[dependencies]
structopt = "0.2.18"
# use of rustls seems to be required for H2 support to work in hyper/reqwest
reqwest = { version = "0.10", default-features = false, features = [ "rustls-tls", "stream" ] }
hls_m3u8 = { git = "https://github.com/Luro02/hls_m3u8.git" }
futures = "0.3"
tokio = { version = "0.2", features = [ "full" ] }
roxmltree = "0.7"
mp4parse = "0.11"
h264-reader = "0.4.0"
hexdump = "0.1.0"
url = "2.1.1"