[package]
name = "strck"
version = "0.1.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hls_m3u8 = { git = "https://github.com/dholroyd/hls_m3u8.git", branch = "parser-perf", features = [ "chrono" ] }
chrono = "0.4"
# use of rustls seems to be required for H2 support to work in hyper/reqwest
reqwest = { version = "0.10", default_features = false, features = [ "rustls-tls", "stream", "gzip" ] }
encoding_rs = "0.8.22"
mime = "0.3.16"
bytes = "0.5.4"
hyper = "0.13.4"
log = "0.4.11"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.8", features = ["v4"] }
blob-uuid = "0.4.0"
url = "2.1.1"
tokio = { version = "0.2.5", features = [ "full" ] }
httpdate = "0.3.2"
wyhash = "0.5.0"